2010-03-16  Joanmarie Diggs  <joanmarie.diggs@gmail.com>

Reviewed by Xan Lopez.

        Added layout tests to get the number of rows and columns.

        https://bugs.webkit.org/show_bug.cgi?id=35504
        [Gtk] Evaluate and fix AtkTable for layout tables

        * platform/gtk/accessibility/table-hierarchy.html:
        * platform/gtk/accessibility/table-hierarchy-expected.txt:
2010-03-16  Joanmarie Diggs  <joanmarie.diggs@gmail.com>

        Reviewed by Xan Lopez.

        https://bugs.webkit.org/show_bug.cgi?id=35504
        [Gtk] Evaluate and fix AtkTable for layout tables

        Causes "layout tables" to be exposed as AccessibilityTables for Gtk.

        * accessibility/AccessibilityTable.cpp:
        (AccessibilityTable::isTableExposableThroughAccessibility):
2010-03-16  Joanmarie Diggs  <joanmarie.diggs@gmail.com>

        Reviewed by Xan Lopez.

        https://bugs.webkit.org/show_bug.cgi?id=35504
        [Gtk] Evaluate and fix AtkTable for layout tables

        Implements rowCount and columnCount for Gtk in DRT.

        * DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp:
        (AccessibilityUIElement::rowCount):
        (AccessibilityUIElement::columnCount):

Canonical link: https://commits.webkit.org/47368@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56073 268f45cc-cd09-0410-ab3c-d52691b4dbfc